--- a/beavs-frontend/package.json
+++ b/beavs-frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.28.0",
+    "@clerk/themes": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
