--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@clerk/clerk-react": "^4.28.0",
     "@clerk/themes": "^1.7.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
