--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@clerk/themes": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
