--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "@clerk/clerk-react": "^4.28.0",
     "@clerk/themes": "^1.7.9",
+    "@clerk/types": "^3.58.0",
+    "@formkit/auto-animate": "^0.8.1",
+    "@tanstack/react-query": "^5.12.2",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
