--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@clerk/types": "^3.58.0",
     "@formkit/auto-animate": "^0.8.1",
     "@tanstack/react-query": "^5.12.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -28,12 +33,17 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.19",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
