--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@tanstack/react-query": "^5.12.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.1.0",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
@@ -33,6 +37,7 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
