--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_REACT_APP_CLERK_PUBLISHABLE_KEY=pk_test_cmVzdGVkLWNhaW1hbi0xMC5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_REACT_APP_API_URL=https://beavsai.onrender.com
+VITE_REACT_APP_AI_API_URL=http://localhost:8080
