--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.3",
     "react-loading-skeleton": "^3.3.1",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
